syntax = "proto3";

package zitadel.session.v2alpha;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/zitadel/zitadel/pkg/grpc/session/v2alpha;session";

message Session {
  string id = 1;
  google.protobuf.Timestamp creation_date = 2;
  google.protobuf.Timestamp change_date = 3;
  uint64 sequence = 4;
  Factors factors = 5;
  map<string, bytes> metadata = 6;
}

message Factors {
  UserFactor user = 1;
  PasswordFactor password = 2;
}

message UserFactor {
  google.protobuf.Timestamp verified_at = 1;
  string id = 2;
  string login_name = 3;
  string display_name = 4;
}

message PasswordFactor {
  google.protobuf.Timestamp verified_at = 1;
}

message SearchQuery {
  oneof query {
    option (validate.required) = true;

    IDsQuery ids_query = 1;
  }
}

message IDsQuery {
  repeated string ids = 1;
}
